--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,40 @@
+// 공통 모듈 설정 정의
+// root에는 필요 x
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.5.3'
-	id 'io.spring.dependency-management' version '1.1.7'
+	id 'io.spring.dependency-management' version '1.1.7' // 스프링 라이브러리 버전 통일
 }
 
 group = 'com.flab'
 version = '0.0.1-SNAPSHOT'
 
 java {
+	// toolchain : gradle이 빌드 시 직접 특정 버전의 JDK를 설치하도록 하자
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(21)
 	}
 }
 
+// 내가 사용할 라이브러리를 어디에서 다운로드할 지 설정
 repositories {
 	mavenCentral()
 }
 
+// 이 프로젝트에 필요한 라이브러리 정의
 dependencies {
+	// 실행 시 (컴파일 + 런타임)
 	implementation 'org.springframework.boot:spring-boot-starter'
+
+	//테스트 코드 전용 (컴파일)
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// 테스트 코드 실행시에만(컴파일에는 필요x)
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
+// Junit test는 gradle이 함.
+// JUnit5을 테스트 플랫폼으로 사용하도록 설정
 tasks.named('test') {
 	useJUnitPlatform()
 }
