--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,7 +1,21 @@
+
+#Gradle ??? ??? ?? ??
 distributionBase=GRADLE_USER_HOME
+
+# ?? ??
 distributionPath=wrapper/dists
+
+#????? Gradle ??
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.14.2-bin.zip
+
+# Gradle ???? ? ?? ??? ???? ?? ??
 networkTimeout=10000
+
+#Gradle? ?? URL? ?? ( ????? zip ?? ??? ?? ?? )
+#false? ?? ??? ???
 validateDistributionUrl=true
+
+#????? gradle zip ??? ??? ?? ??
 zipStoreBase=GRADLE_USER_HOME
+#????? gradle zip ??? ??? ??
 zipStorePath=wrapper/dists
