--- a/build.gradle
+++ b/build.gradle
@@ -23,22 +23,35 @@ repositories {
 
 // 이 프로젝트에 필요한 라이브러리 정의
 dependencies {
-	// 실행 시 (컴파일 + 런타임)
-	implementation 'org.springframework.boot:spring-boot-starter'
+	// basic
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	implementation 'org.springframework.security:spring-security-crypto'
 
+	// database, jpa
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	runtimeOnly 'com.mysql:mysql-connector-j:8.0.33'
 
-	//테스트 코드 전용 (컴파일)
+	//test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'com.h2database:h2'
-
-
-	// 테스트 코드 실행시에만(컴파일에는 필요x)
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	//redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+	//mail
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+	// aws
+	implementation 'software.amazon.jdbc:aws-advanced-jdbc-wrapper:2.6.1'
+
+	//jwt
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
 }
 
 // Junit test는 gradle이 함.
